# GoLite

./: .gitignore  CMakeLists.txt  README.md  build.sh  execute.sh  run.sh  test.go
etc/bison/: golang.y
etc/flex/: golang.l
etc/scan_parse/: CMakeLists.txt
etc/typescript/: stubs.ts
golite/include/: symbol_table.h
golite/src/: symbol_table.cpp
include/golite/: append.h  array.h  assignment.h  assignment_factory.h  assignment_statement.h  binary.h  binary_expression.h  bison.h  block.h  break.h  builtin.h  cast.h  continue.h  declarable.h  declarable_factory.h  declaration.h  empty.h  expression.h  expression_factory.h  for.h  for_statement.h  func.h  function.h  function_call.h  function_call_expression.h  function_declarable.h  function_param.h  hex_value.h  identifier.h  identifier_expression.h  if.h  if_statement.h  inc_dec.h  index.h  index_expression.h  literal.h  literal_expression.h  octal_value.h  parenthesis.h  pointer.h  (+35 more)
programs/3-semantics+codegen/: 1-2-2-Type-equality-1.go  1-2-2-Type-equality-2.go  1-2-2-Type-equality-3.go  2-1-Variable-declaration-1.go  2-1-Variable-declaration-2.go  2-1-Variable-declaration-5.go  2-1-Variable-declaration-6.go  2-2-Type-declaration-1.go  2-2-Type-declaration-2.go  2-2-Type-declaration-3.go  2-2-Type-declaration-5.go  2-3-Function-declaration-1.go  2-3-Function-declaration-10.go  2-3-Function-declaration-11.go  2-3-Function-declaration-12.go  2-3-Function-declaration-13.go  2-3-Function-declaration-16.go  2-3-Function-declaration-17.go  2-3-Function-declaration-6.go  2-3-Function-declaration-7.go  2-3-Function-declaration-8.go  2-3-Function-declaration-9.go  2-4-Special-function-1.go  2-4-Special-function-10.go  2-4-Special-function-2.go  2-4-Special-function-3.go  2-4-Special-function-4.go  2-4-Special-function-5.go  2-4-Special-function-6.go  2-4-Special-function-7.go  2-4-Special-function-8.go  2-4-Special-function-9.go  2-Declarations-1.go  2-Declarations-2.go  2-Declarations-3.go  2-Declarations-4.go  3-10-Print-println-1.go  3-10-Print-println-2.go  3-10-Print-println-3.go  3-11-For-2.go  (+79 more)
src/declarables/: function.cpp  function_param.cpp  type.cpp  variable.cpp
src/expression/: append.cpp  binary.cpp  primary_expression.cpp  unary.cpp
src/expressions/: expression_factory.cpp  index_expression.cpp  literal_expression.cpp  primary.cpp  primary_expression.cpp  slice_expression.cpp  unary_expression.cpp
src/golite/: main.cpp
src/lib/: bison.cpp  ts_helper.cpp  utils.cpp
src/program/: program.cpp
tools/peephole-opt/JOOSA-src/: CMakeLists.txt  joos.y  patterns.h
(+505 files in other folders)
